# whoopster

./: .dockerignore  .env.example  .gitattributes  .gitignore  .python-version  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION.md  LICENSE  PLAN_UPDATES.md  README.md  SECURITY_FINDINGS.md  STATUS.md  TESTING_SETUP_COMPLETE.md  TEST_RESULTS.md  alembic.ini  coverage.xml  docker-compose.app.yml  docker-compose.yml  osv-scanner.toml  pyproject.toml  pytest.ini  renovate.json  requirements.txt
.github/workflows/: claude-code-review.yml  docker-build.yml  docker-publish.yml  ghcr-retention.yml  security-scan.yml  supply-chain.yml  test.yml
docs/: ARCHITECTURE.md  BRONZE.md  DEPLOYMENT.md  TESTING.md  WEBHOOKS_PLAN.md
grafana/dashboards/: whoop-cycle.json  whoop-overview.json  whoop-recovery.json  whoop-sleep.json  whoop-workout.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: postgres.yml
scripts/: backfill_data.py  entrypoint.py  init_oauth.py  test_connection.py
src/: __init__.py  config.py  main.py
src/api/: rate_limiter.py  whoop_client.py
src/auth/: encryption.py  oauth_client.py  token_manager.py
src/bronze/: __init__.py  capture.py
src/database/: init_db.py  session.py
src/database/migrations/: env.py  (+1 more)
src/models/: api_models.py  db_models.py
src/scheduler/: job_scheduler.py
src/services/: body_measurement_service.py  cycle_service.py  data_collector.py  reconcile.py  recovery_service.py  sleep_service.py  sync_status.py  workout_service.py
src/utils/: logging_config.py  sync_lock.py
tests/: README.md  conftest.py
tests/integration/: test_data_sync.py  test_database.py
tests/unit/: test_bronze.py  test_config.py  test_models.py  test_oauth_client.py  test_rate_limiter.py  test_reconcile.py  test_scheduler.py  test_services.py  test_session.py  test_sync_lock.py  test_sync_status.py  test_token_manager.py  test_whoop_client.py
(+5 files in other folders)
